# reportTask

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  start_worker_django.sh
api/: celery.py  models.py  serializer.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_reports_api_reports_task_id_a6a3f1_idx.py
reportTask/: asgi.py  settings.py  urls.py  wsgi.py
